--- a/_include/nvme/nvme-enable-san-boot.adoc
+++ b/_include/nvme/nvme-enable-san-boot.adoc
@@ -1,25 +1,22 @@
-== Optionally, eEnable 1MB I/O 
-
-ONTAP reports a Max Data Transfer Size (MDTS) of 8 in the Identify Controller data. This means the maximum I/O request size can be up to 1MB. To issue I/O requests of size 1MB for a Broadcom NVMe/FC host, you should increase the lpfc value of the `lpfc_sg_seg_cnt` parameter to 256 from the default value of 64.
-
-NOTE: These steps don't apply to Qlogic NVMe/FC hosts.
-
+== Step 6: Optionally, enable SAN booting
+ 
+You can configure your host to use SAN booting to simplify deployment and improve scalability.
+ 
+.Before you begin
+Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
+ 
 .Steps
-
-. Set the `lpfc_sg_seg_cnt` parameter to 256:
+ 
+. Map the SAN boot LUN to the host.
 +
-----
-cat /etc/modprobe.d/lpfc.conf 
-----
+See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
+. Verify that multiple paths are available.
 +
-----
-options lpfc lpfc_sg_seg_cnt=256
-----
-
-. Run the `dracut -f` command, and reboot the host.
-
-. Verify that the value for `lpfc_sg_seg_cnt` is 256:
+[NOTE]
+Multiple paths become available after the host OS is up and running on the paths.
+ 
+. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
-----
-cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt 
-----
+For information on how to enable the HBA BIOS, see your vendor-specific documentation.
+ 
+. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
