ontapdoc-2906 known issues

--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -50,7 +50,7 @@ include::_include/nvme/nvme-enable-san-boot.adoc[]
 
 include::_include/nvme/nvme-secure-in-band-authentication.adoc[]
 
-== Step 8: Known issues
+== Known issues
 
 No known issues exist for the NVMe-oF host configuration on Rocky Linux 9.5 with ONTAP release.
 
