--- a/hu_sles_12SP4.adoc
+++ b/hu_sles_12SP4.adoc
@@ -31,9 +31,12 @@ include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the SUSE Linux Enterprise Server 12 SP4 with ONTAP release.
 
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
