--- a/_include/hu/customize-parameters.adoc
+++ b/_include/hu/customize-parameters.adoc
@@ -1,4 +1,4 @@
-== Customize multipath parameters for ONTAP LUNs
+== Step 5: Customize multipath parameters for ONTAP LUNs
 You should check your `/etc/multipath.conf` file, especially in the defaults section, for settings that might be overriding the <<multipath-parameter-settings,default settings for multipath parameters>>. 
 
 For example, if your host is connected to LUNs from other vendors and any of the multipath parameter settings are overridden, you need to correct them by adding stanzas later in the `multipath.conf` file that apply specifically to ONTAP LUNs. If you don't do this, the ONTAP LUNs might not work as expected. 
