--- a/hu_rhel_81.adoc
+++ b/hu_rhel_81.adoc
@@ -23,18 +23,14 @@ You can use multipathing with RHEL 8.1 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
 [[known-problems-and-limitations]]
-== Known issues
+== Step 6: Review the known issues
 
 The RHEL 8.1 with ONTAP release has the following known issues:
 
@@ -47,5 +43,11 @@ The RHEL 8.1 with ONTAP release has the following known issues:
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1275838[1275838^] | Kernel disruption occurs on Red Hat Enterprise Linux 8.1 with QLogic QLE2742 32GB FC HBA during storage failover operations | Kernel disruption occurs during storage failover operations on the Red Hat Enterprise Linux 8.1 kernel with a QLogic QLE2742 Fibre Channel (FC) host bus adapter (HBA). The kernel disruption causes Red Hat Enterprise Linux 8.1 to reboot, leading to application disruption. If the kdump mechanism is enabled, the kernel disruption generates a vmcore file located in the/var/crash/ directory. You can check the vmcore file to determine the cause of the disruption. A storage failover with the QLogic QLE2742 HBA event affects the "kmem_cache_alloc+131"module. You can locate the event in the vmcore file by finding the following string:    " [exception RIP: kmem_cache_alloc+131]"After the kernel disruption, reboot the Host OS and recover the operating system. Then restart the applications. 
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1266250[1266250^] | Login to multiple paths fails during the Red Hat Enterprise Linux 8.1 installation on iSCSI SAN LUN | You cannot login to multiple paths during the Red Hat Enterprise Linux 8.1 installation on iSCSI SAN LUN multipath devices. Installation is not possible on multipath iSCSI device and the multipath service is not enabled on the SAN boot device. 
 |===
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // 2024 SEP 2, ONTAPDOC-2345
