--- a/hu_rhel_82.adoc
+++ b/hu_rhel_82.adoc
@@ -23,19 +23,21 @@ You can use multipathing with RHEL 8.2 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
 [[known-problems-and-limitations]]
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the RHEL 8.2 with ONTAP release.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // BURT-1579262 22 Aug 2023
