--- a/hu_rhel_85.adoc
+++ b/hu_rhel_85.adoc
@@ -23,17 +23,19 @@ You can use multipathing with RHEL 8.5 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
 [[known-problems-and-limitations]]
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the RHEL 8.5 with ONTAP release.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
