--- a/hu_rhel_95.adoc
+++ b/hu_rhel_95.adoc
@@ -23,19 +23,21 @@ You can use multipathing with RHEL 9.5 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the FC host configuration for RHEL 9.5 with ONTAP release.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 //ONTAPDOC-2561 25-Nov-2024
 //ONTAPDOC-1584 1-Feb-2024
