--- a/hu_sles_12SP2.adoc
+++ b/hu_sles_12SP2.adoc
@@ -23,16 +23,18 @@ You can use multipathing with SUSE Linux Enterprise Server 12 SP2 to manage ONTA
 
 include::_include/hu/multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the SUSE Linux Enterprise Server 12 SP2 with ONTAP release.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
