--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -23,17 +23,13 @@ You can use multipathing with SUSE Linux Enterprise Server 12 SP3 to manage ONTA
 
 include::_include/hu/multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 The SUSE Linux Enterprise Server 15 SP3 with ONTAP release has the following known issues:
 
@@ -76,5 +72,11 @@ In this case kernel disruption was observed in the module “raw_spin_lock_irqsa
 
 After kernel disruption, the operating system can be recovered by rebooting the host operating system and restarting the application as required. 
 |===
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // 2024 SEP 2, ONTAPDOC-2345
