--- a/hu_sles_15SP1.adoc
+++ b/hu_sles_15SP1.adoc
@@ -23,17 +23,13 @@ You can use multipathing with SUSE Linux Enterprise Server 15 SP1 to manage ONTA
 
 include::_include/hu/multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 The SUSE Linux Enterprise Server 15 SP1 with ONTAP release has the following known issues:
 
@@ -50,5 +46,11 @@ cat/sys/class/fc_host/host*/device/rport*/fc_remote_ports/rport*/port_name
 cat/sys/class/fc_host/host*/device/rport*/fc_remote_ports/rport*/port_state
 ----
 |===
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // 2024 SEP 2, ONTAPDOC-2345
