--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -23,15 +23,11 @@ You can use multipathing with SUSE Linux Enterprise Server 15 SP2 to manage ONTA
 
 include::_include/hu/multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
-
-include::_include/hu/hu-asm-mirroring.adoc[]
 
 == Known issues
 
@@ -62,5 +58,11 @@ reboot: System halted
 ----
 
 |===
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // 2024 SEP 2, ONTAPDOC-2345
