minor edit to "What's next"

--- a/_include/hu/use-linux-host-utilities.adoc
+++ b/_include/hu/use-linux-host-utilities.adoc
@@ -1,1 +1,1 @@
-* Learn about using the Host Utilities tool to manage the configuration of your ONTAP LUNs. Refer to the link:hu_luhu_71_cmd.html[Linux Host Utilities 7.1 command reference]. 
+* link:hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool]. 
