Add note to rhel files about not configuring KVM

--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -29,7 +29,7 @@ include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-== Known issues
+== Step 6: Review the known issues
 
 The SUSE Linux Enterprise Server 15 SP2 with ONTAP release has the following known issues:
 
