--- a/hu_sles_15SP4.adoc
+++ b/hu_sles_15SP4.adoc
@@ -29,7 +29,7 @@ include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/customize-parameters.adoc[]
 
-== Known issues
+== Step 6: Review the known issues
 
 There are no known issues for the SUSE Linux Enterprise Server 15 SP4 with ONTAP release.
 
