--- a/hu_rhel_83.adoc
+++ b/hu_rhel_83.adoc
@@ -15,6 +15,8 @@ summary: Install the Linux Host Utilities on a RHEL 8.3 host to manage FCP and i
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 8.3 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
+include::_include/hu/rhel-configure-kvm-note.adoc[]
+
 include::_include/hu/install-linux-host-utilities.adoc[]
 
 == Step 2: Confirm the multipath configuration for your host
@@ -30,7 +32,7 @@ include::_include/hu/exclude-device.adoc[]
 include::_include/hu/rhel-customize-parameters.adoc[]
 
 [[known-problems-and-limitations]]
-== Review the known issues
+== Step 6: Review the known issues
 
 There are no known issues for the RHEL 8.3 with ONTAP release.
 
