--- a/hu_rhel_91.adoc
+++ b/hu_rhel_91.adoc
@@ -15,6 +15,8 @@ summary: Install the Linux Host Utilities on a RHEL 9.1 host to manage FCP and i
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 9.1 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
+include::_include/hu/rhel-configure-kvm-note.adoc[]
+
 include::_include/hu/install-linux-host-utilities.adoc[]
 
 == Step 2: Confirm the multipath configuration for your host
@@ -23,17 +25,13 @@ You can use multipathing with RHEL 9.1 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 The RHEL 9.1 with ONTAP release has the following known issue:
 
@@ -44,4 +42,9 @@ The RHEL 9.1 with ONTAP release has the following known issue:
 
 |===
 
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 // 2024 SEP 2, ONTAPDOC-2345
