--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -33,21 +33,28 @@ For additional details on supported configurations, see the link:https://mysuppo
 * Known limitations: 
 ** There are no known limitations.
 
+== Step 1: Validate software versions
 include::_include/nvme/nvme-validate-software-versions.adoc[] 
 
+== Step 2: Configure NVMe/FC
 include::_include/nvme/nvme-configure-nvme-fc.adoc[]
 
+== Step 3: Optionally, enable 1MB I/O 
 include::_include/nvme/nvme-enable-1mb-io.adoc[]
 
+== Step 4: Configure NVMe/TCP
 include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 [NOTE]
 Beginning with Rocky Linux 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
+== Step 5: Validate NVMe-oF
 include::_include/nvme/nvme-validate-nvme-of.adoc[] 
 
+== Step 6: Optionally, enable SAN booting
 include::_include/nvme/nvme-enable-san-boot.adoc[]
 
+== Step 7: Set up secure in-band authentication
 include::_include/nvme/nvme-secure-in-band-authentication.adoc[]
 
 == Known issues
