--- a/nvme_rockylinux_88.adoc
+++ b/nvme_rockylinux_88.adoc
@@ -5,7 +5,7 @@ keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.8 with ONTAP
 ---
 
-= NVMe-oF host configuration for Rocky Linux 8.8 with ONTAP
+= Configure Rocky Linux 8.8 with NVMe-oF for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,456 +14,43 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 8.8 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and other transports, is supported with Rocky Linux 8.8 with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is the equivalent of ALUA multipathing in iSCSI and FC environments and is implemented with in-kernel NVMe multipath. 
+You can configure Rocky Linux 8.8 with NVMe protocols to manage ONTAP LUNs.
+[.lead]
+include::_include/nvme/nvme-introduction.adoc[] 
 
-The following support is available for the NVMe-oF host configuration for Rocky Linux 8.8 with ONTAP:
+.About this task 
+You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 8.8. You should also review the known limitations before starting the configuration process.
 
-* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
-
+* Support available:
+** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+** Running NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
++
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-
-== Known limitations
-
-* In-kernel NVMe multipath is disabled by default for Rocky Linux 8.8 NVMe-oF hosts. Therefore, you need to enable it manually.
-* On Rocky Linux 8.8 hosts, NVMe/TCP is a technology preview feature due to open issues.
-* SAN booting using the NVMe-oF protocol is currently not supported.
-
-== Enable in-kernel multipath
-
-You can use the following procedure to enable in-kernal multipath.
-
-.Steps
-
-. Install Rocky Linux 8.8 on the host server. 
-. After the installation is complete, verify that you are running the specified Rocky Linux 8.8 kernel. 
-+
-----
-# uname -r
-----
-+
-*Example output*
-+
-----
-4.18.0-477.10.1.el8_8.x86_64
-----
-
-. Install the nvme-cli package: 
-+
-----
-rpm -qa|grep nvme-cli
-----
-+
-*Example output*
-+
-----
-nvme-cli-1.16-7.el8.x86_64
-----
-
-. Enable in -kernel NVMe multipath:
-+
-----
-# grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-477.10.1.el8_8.x86_64
-----
-
-. On the host, check the host NQN string at `/etc/nvme/hostnqn`:
-+
-----
-# cat /etc/nvme/hostnqn
-----
-+
-*Example output*
-+
-----
-nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
-----
-
-. Verify that the `hostnqn` string matches the `hostnqn` string for the corresponding subsystem on the ONTAP array:
-+
-----
-::> vserver nvme subsystem host show -vserver vs_fcnvme_141
-----
-+
-*Example output*
-+
-----
-Vserver     Subsystem       Host NQN
------------ --------------- ----------------------------------------------------------
-vs_nvme161 rockylinux_161_LPe32002    nqn.2014-08.org.nvmexpress:uuid:f6517cae-3133-11e8-bbff-7ed30aef123f
-----
-+
-[NOTE]
-If the host NQN strings do not match, you can use the `vserver modify` command to update the host NQN string on your corresponding ONTAP NVMe subsystem to match the host NQN string `/etc/nvme/hostnqn` on the host.
-
-. Reboot the host.
-
-[NOTE]
-====
-If you intend to run both NVMe and SCSI co-existent traffic on the same host, NetApp recommends using the in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. This means that the ONTAP namespaces should be excluded from dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf` file:	
-
-----
-# cat /etc/multipath.conf
-defaults {
-  enable_foreign  NONE
-}
-----
-====
-
-== Configure NVMe/FC
-
-You can configure NVMe/FC for Broadcom/Emulex or Marvell/Qlogic adapters.
-
-[role="tabbed-block"]
-====
-.Broadcom/Emulex
---
-.Steps
-
-. Verify that you are using the supported adapter model: 
-+
-----
-# cat /sys/class/scsi_host/host*/modelname
-----
-+
-*Example output:*
-+
-----
-LPe32002-M2
-LPe32002-M2
-----
-+
-----
-# cat /sys/class/scsi_host/host*/modeldesc
-----
-+
-*Example output:*
-+
-----
-Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter 
-Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
-----
-
-. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver: 
-+
-----
-# cat /sys/class/scsi_host/host*/fwrev 
-14.0.639.18, sli-4:2:c
-14.0.639.18, sli-4:2:c
-----
-+
-----
-# cat /sys/module/lpfc/version 
-0:14.0.0.18
-----
-+
-For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
-
-. Verify that `lpfc_enable_fc4_type` is set to `3`:
-+
-----
-# cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
-3
-----
-
-. Verify that the initiator ports are up and running and that you can see the target LIFs:
-+
-----
-# cat /sys/class/fc_host/host*/port_name
-0x100000109b1c1204
-0x100000109b1c1205
-----
-+
-----
-# cat /sys/class/fc_host/host*/port_state
-Online
-Online
-----
-+
-----
-# cat /sys/class/scsi_host/host*/nvme_info NVME Initiator Enabled
-XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x10000090fae0ec88 WWNN x20000090fae0ec88 DID x0a1300 ONLINE
-NVME RPORT       WWPN x2049d039ea36a105 WWNN x2048d039ea36a105 DID x0a0c0a TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x204bd039ea36a105 WWNN x2048d039ea36a105 DID x0a100a TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000134 Cmpl 0000000134 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000825e567 Issue 000000000825d7ed OutIO fffffffffffff286
-abort 0000027c noxri 00000000 nondlp 00000a02 qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 00000782 Err 000130fa
-
-NVME Initiator Enabled
-XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x10000090fae0ec89 WWNN x20000090fae0ec89 DID x0a1200 ONLINE
-NVME RPORT       WWPN x204ad039ea36a105 WWNN x2048d039ea36a105 DID x0a080a TARGET DISCSRVC ONLINE
-NVME RPORT       WWPN x204cd039ea36a105 WWNN x2048d039ea36a105 DID x0a090a TARGET DISCSRVC ONLINE
-NVME Statistics
-LS: Xmt 0000000134 Cmpl 0000000134 Abort 00000000
-LS XMIT: Err 00000000  CMPL: xb 00000000 Err 00000000
-Total FCP Cmpl 000000000826ced5 Issue 000000000826c226 OutIO fffffffffffff351
-        abort 0000029d noxri 00000000 nondlp 000008df qdepth 00000000 wqerr 00000000 err 00000000
-FCP CMPL: xb 00000821 Err 00012fcd
-
-----
-
-
---
-
-.Marvell/QLogic FC Adapter for NVMe/FC
---
-The native inbox qla2xxx driver included in the Rocky Linux 8.8 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
-
-.Steps
-
-Verify that you are running the supported adapter driver and firmware versions:
-+
-----
-# cat /sys/class/fc_host/host*/symbolic_name
-----
-+
-*Example output*
-+
-----
-QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
-QLE2772 FW:v9.10.11 DVR:v10.02.07.900-k-debug
-----
-
-. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
-+
-----
-# cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
-1
-----
-
---
-====
-
-=== Enable 1MB I/O (Optional)
-
-include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
-
-
-
-== Configure NVMe/TCP
-
-include::_include/nvme/reuse_configure_nvmetcp.adoc[]
-
-.Steps
-
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
-+
-----
-nvme discover -t tcp -w host-traddr -a traddr
-----
-+
-*Example output:*
-+
-----
-# nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14
-
-Discovery Log Number of Records 8, Generation counter 10
-=====Discovery Log Entry 0======
-trtype:  tcp
-adrfam:  ipv4
-subtype: unrecognized
-treq:    not specified
-portid:  0
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
-traddr:  192.168.211.15
-sectype: none
-=====Discovery Log Entry 1======
-trtype:  tcp
-adrfam:  ipv4
-subtype: unrecognized
-treq:    not specified
-portid:  1
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
-traddr:  192.168.111.15
-sectype: none
-=====Discovery Log Entry 2======
-trtype:  tcp
-adrfam:  ipv4
-subtype: unrecognized
-treq:    not specified
-portid:  2
-trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:discovery
-traddr:  192.168.211.14
-sectype: none
-..........
-----
-
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data:
-+
-----
-nvme discover -t tcp -w host-traddr -a traddr
-----
-+
-*Example output:*
-+
-----
-# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
-# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
-# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
-# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
-----
-
-. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
-+
-----
-nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
-----
-+
-*Example output:*
-+
-----
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
-----
-
-
-
-== Validate NVMe-oF
-
-You can use the following procedure to validate NVME-oF.
-
-.Steps
-
-. Verify that the in-kernel NVMe multipath is enabled:
-+
-----
-# cat /sys/module/nvme_core/parameters/multipath
-Y
-----
-
-. Verify that the appropriate NVMe-oF settings (such as, `model` set to `NetApp ONTAP Controller` and load balancing `iopolicy` set to `round-robin`) for the respective ONTAP namespaces correctly reflect on the host:
-+
-----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/model
-NetApp ONTAP Controller
-NetApp ONTAP Controller
-----
-+
-----
-# cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy 
-round-robin
-round-robin
-----
-
-. Verify that the namespaces are created and correctly discovered on the host:
-+
-----
-# nvme list
-----
-+
-*Example output:*
-+
-----
-Node         SN                   Model                          
----------------------------------------------------------  
-/dev/nvme3n1 81Gx7NSiKSQeAAAAAAAB	NetApp ONTAP Controller	
-                               
-
-Namespace Usage    Format             FW             Rev
------------------------------------------------------------
-1                 21.47 GB / 21.47 GB	4 KiB + 0 B   FFFFFFFF
-----
-
-. Verify that the controller state of each path is live and has the correct ANA status:
-+
-
-[role="tabbed-block"]
-====
-.NVMe/FC
---
-----
-# nvme list-subsys /dev/nvme3n1 
-----
-
-*Example output:*
-
-----
-nvme-subsys3 - NQN=nqn.1992-08.com.netapp:sn.ab4fa6a5ba8b11ecbe3dd039ea359e4b:subsystem.rockylinux_161_Lpe32002
-\
- +- nvme0 fc traddr=nn-0x2048d039ea36a105:pn-0x204cd039ea36a105 host_traddr=nn-0x20000090fae0ec89:pn-0x10000090fae0ec89 live non-optimized
- +- nvme1 fc traddr=nn-0x2048d039ea36a105:pn-0x204ad039ea36a105 host_traddr=nn-0x20000090fae0ec89:pn-0x10000090fae0ec89 live optimized
- +- nvme2 fc traddr=nn-0x2048d039ea36a105:pn-0x204bd039ea36a105 host_traddr=nn-0x20000090fae0ec88:pn-0x10000090fae0ec88 live non-optimized
- +- nvme4 fc traddr=nn-0x2048d039ea36a105:pn-0x2049d039ea36a105 host_traddr=nn-0x20000090fae0ec88:pn-0x10000090fae0ec88 live optimized
-----
---
-.NVMe/TCP
---
-----
-# nvme list-subsys /dev/nvme0n1 
-----
-
-*Example output:*
-
-----
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rockylinux_tcp_165
-\
- +- nvme0 tcp traddr=192.168.111.15 trsvcid=4420 host_traddr=192.168.111.79 live non-optimized
- +- nvme1 tcp traddr=192.168.111.14 trsvcid=4420 host_traddr=192.168.111.79 live optimized
- +- nvme2 tcp traddr=192.168.211.15 trsvcid=4420 host_traddr=192.168.211.79 live non-optimized
-----
---
-====
-
-. Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
-+
-[role="tabbed-block"]
-====
-.Column
---
-----
-# nvme netapp ontapdevices -o column
-----
-
-*Example output:*
-
-----
-Device        Vserver   Namespace Path                                                          
------------------------ ------------------------------ 
-/dev/nvme0n1 vs_tcp           /vol/vol1/ns1   
-              
-
-
-NSID       UUID                                   Size
-------------------------------------------------------------
-1          338d73ce-b5a8-4847-9cc9-b127c75d8855	21.47GB
-----
---
-.JSON
---
-----
-# nvme netapp ontapdevices -o json
-----
-
-*Example output*
-----
-{
-  "ONTAPdevices" : [
-    {
-      "Device" : "/dev/nvme0n1",
-      "Vserver" : "vs_tcp79",
-      "Namespace_Path" : "/vol/vol1/ns1",
-      "NSID" : 1,
-      "UUID" : "338d73ce-b5a8-4847-9cc9-b127c75d8855",
-      "Size" : "21.47GB",
-      "LBA_Data_Size" : 4096,
-      "Namespace_Size" : 5242880
-    },
-]
-
-}
-
-----
---
-====
+* Features available:
+** Beginning with ONTAP 9.12.1, you can use secure in-band authentication for NVMe-oF with Rocky Linux 8.8.
+** Rocky Linux 8.8 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
+* Known limitations: 
+** In-kernel NVMe multipath is disabled by default for Rocky Linux 8.8 NVMe-oF hosts. Therefore, you need to enable it manually.
+** On Rocky Linux 8.8 hosts, NVMe/TCP is a technology preview feature due to open issues. Refer to the https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/8/html-single/8.8_release_notes/index#technology-preview_file-systems-and-storage[Rocky Linux 8.8 Release Notes^] for details. 
+** SAN booting using the NVMe-oF protocol is currently not supported.
+
+== Step 1: Validate software versions
+include::_include/nvme/nvme-validate-software-versions.adoc[] 
+
+== Step 2: Configure NVMe/FC
+include::_include/nvme/nvme-configure-nvme-fc.adoc[]
+
+== Step 3: Optionally, enable 1MB I/O 
+include::_include/nvme/nvme-enable-1mb-io.adoc[] 
+
+== Step 4: Configure NVMe/TCP
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+
+== Step 5: Validate NVMe-oF
+include::_include/nvme/nvme-validate-nvme-of.adoc[] 
+
+== Step 6: Set up secure in-band authentication
+include::_include/nvme/nvme-secure-in-band-authentication.adoc[] 
 
 == Known issues
 
